--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="assets/img/TTC-LOGO.png" rel="icon">
-  <link href="assets/img/TTC-LOGO.png" rel="apple-touch-icon">
+  <link href="assets/img/TTC_Logo_Square.png" rel="icon">
+  <link href="assets/img/TTC_Logo_Square.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>TTC Safety</h1>
+          <h1>Welcome to TTC Safety</h1>
           <h2>Subtitle here</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
