--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -64,14 +64,15 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Welcome to TTC Safety</h1>
-          <h2>Subtitle here</h2>
+          <h2>Please don't die</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#about" class="btn-get-started scrollto">Emergency</a>
             <a href="https://ttc.ca/" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Start Recording</span></a>
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 placeholder" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/placeholder.png" class="img-fluid animated" alt="">
+        <div class="col-lg-6 order-1 order-lg-2 chart_green_1" data-aos="zoom-in" data-aos-delay="200">
+          <img src="assets/img/chart_green_1.png" width="780" 
+          height="780" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
