change links and icons

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -49,12 +49,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">TTC Safety</a></li>
           <li><a class="nav-link scrollto" href="https://www.ttc.ca/">TTC Website</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
@@ -66,8 +64,8 @@
           <h1>Welcome to TTC Safety</h1>
           <h2>Please don't die</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Emergency</a>
-            <a href="https://ttc.ca/" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Start Recording</span></a>
+            <a href="https://ttc.ca/" class="btn-get-started scrollto">Emergency</a>
+            <a href="https://ttc.ca/" class="glightbox btn-watch-video"><i class="bi bi-mic"></i><span>Start Recording</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 chart_green_1" data-aos="zoom-in" data-aos-delay="200">
