--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -44,12 +44,10 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">TTC Safety</a></h1>
-      <a href="index.html" class="logo me-auto"><img src="assets/img/TTC-LOGO.png" alt="" class="img-fluid"></a>
-
+      <a href="https://www.ttc.ca/" class="logo me-auto"><img src="assets/img/TTC-LOGO.png" alt="" class="img-fluid"></a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="https://www.ttc.ca/">TTC Website</a></li>
+          <li><h1 class="logo me-auto"><a>TTC Safety</a></h1></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
